this is the point where you should start the tutorial

--- a/public/password-reset.html
+++ b/public/password-reset.html
@@ -10,7 +10,7 @@
     <div class="login-container">
       <h1>🧁 Tilde's Cupcake Shoppe 🧁</h1>
       <h2>Forgot your password?</h2>
-      <form id="resetPassword">
+      <form action="/reset-password" method="post">
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
